--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,7 +1,7 @@
 /* color palette from <https://github.com/vuejs/theme> */
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback');
-@import 'admin-lte/plugins/fontawesome-free/css/all.min.css';
-@import 'admin-lte/dist/css/adminlte.min.css';
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback'); 
+@import 'admin-lte/plugins/fontawesome-free/css/all.min.css'; 
+@import 'admin-lte/dist/css/adminlte.min.css'; */
 
 .hr_for_sidebar{
     border-bottom: 2px solid #4f5962;
